# pwnadventure3_winsys

./: README.md  pwnie_multihack.sln
game_func_hook/: Cargo.toml
game_func_hook/src/: game_declars.rs  lib.rs
pwnie_multihack/: HookFunctions.h  HookHelper.cpp  HookHelper.h  ModifyGame.cpp  ModifyGame.h  dllmain.cpp  gameTypes.h  pwnie_multihack.vcxproj  pwnie_multihack.vcxproj.filters
