[package]
name = "game_func_hook"
version = "0.1.0"
authors = ["lillaptop"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
winapi = "0.2.*"
user32-sys = "0.2.*"
kernel32-sys = "0.2.*"
detour = "*"
libc = "*"